# cardiovascular-ai-detection-project

./: LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: Home.py
data/raw/: cardiovascular_data.csv
docs/: architecture.md  data_dictionary.md  methodology.md
reports/figures/: project_diagram.txt  project_summary.txt
scripts/: generate_sample_data.py
src/: __init__.py
src/data/: ingestion.py  preprocessing.py  validation.py
src/features/: feature_engineering.py
src/models/: evaluate.py  interpret.py  train.py
src/utils/: config.py  helpers.py
tests/: __init__.py  test_features.py  test_model.py  test_preprocessing.py
