[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiovascular-ai-detection"
version = "1.0.0"
description = "AI-powered cardiovascular disease detection system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nathalia Adriele", email = "nathalia.adriele@example.com"}
]
keywords = ["machine-learning", "healthcare", "cardiovascular", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/nathadriele/cardiovascular-ai-detection"
Documentation = "https://github.com/nathadriele/cardiovascular-ai-detection/blob/main/docs/methodology.md"
Repository = "https://github.com/nathadriele/cardiovascular-ai-detection"
"Bug Tracker" = "https://github.com/nathadriele/cardiovascular-ai-detection/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
